<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.santhosh.codepath.todo.DetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="gone" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.santhosh.codepath.todo.DetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/ViewStyle">

                <TextView
                    style="@style/DetailLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_label" />

                <EditText
                    android:id="@+id/title_input"
                    style="@style/EditValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/enter_task_name" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout style="@style/ViewStyle">

                <TextView
                    style="@style/DetailLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notes_label" />

                <EditText
                    android:id="@+id/notes_input"
                    style="@style/EditValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/enter_notes" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout style="@style/ViewStyle">

                <TextView
                    style="@style/DetailLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/priority_label" />

                <Spinner
                    android:id="@+id/pri_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/priorities" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout style="@style/ViewStyle">

                <TextView
                    style="@style/DetailLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status_label" />

                <Spinner
                    android:id="@+id/status_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/status" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout style="@style/ViewStyle">

                <TextView
                    style="@style/DetailLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_label" />

                <DatePicker
                    android:id="@+id/date_input"
                    style="@style/EditValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:calendarViewShown="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
